# Sarek

./: .gitignore  CHANGES.md  Makefile  README.md  dune  dune-project  sarek-cuda.opam  sarek-metal.opam  sarek-opencl.opam  sarek-vulkan.opam  sarek.opam  spoc.opam
.harness/: harness.json
benchmarks/: bench_matrix_mul.ml  bench_matrix_mul_tiled.ml  common.ml
briefs/: audit-2026-06-02.md  backend-variant-dedup-implementer.md  backend-variant-dedup-intake.md  backend-variant-dedup-plan.md  backend-variant-dedup-reviewer.md  cpu-runtime-split-intake.md  ir-interp-split-intake.md  native-gen-split-intake.md  native-gen-split-plan.md  parse-split-intake.md  pcr-pr1-decouple-implementer.md  pcr-pr2-pure-registry-implementer.md  pcr-pr3-frontend-split-impl.md  pcr-pr3-frontend-split-implementer.md  pcr-pr3-frontend-split-reviewer.md  pcr-pr4a-pure-registry-lib-impl.md  pcr-pr4a-pure-registry-lib-implementer.md  pcr-pr4a-pure-registry-lib-reviewer.md  pcr-pr4b-sarek-codegen-impl.md  pcr-pr4b-sarek-codegen-implementer.md  pcr-pr4b-sarek-codegen-reviewer.md  pcr-pr5a-pure-stdlib-meta-impl.md  pcr-pr5a-pure-stdlib-meta-implementer.md  pcr-pr5a-pure-stdlib-meta-reviewer.md  pcr-pr5b-transpile-impl.md  pcr-pr5b-transpile-implementer.md  pcr-pr5b-transpile-reviewer.md  phase2-playground-mvp-impl.md  phase2-playground-mvp-implementer.md  phase2-playground-mvp-reviewer.md  plugin-base-sig-intake.md  pure-codegen-extraction-impl.md  pure-codegen-extraction-implementer.md  pure-codegen-extraction-intake.md  pure-codegen-extraction-plan.md  pure-codegen-extraction-qa-scope.md  pure-codegen-extraction-reviewer.md  pure-codegen-rollout-intake.md  vulkan-api-split-intake.md  webgpu-runner-abi-impl.md
docs/: team-proposal-2026-05-29.md  website-audit-2026-06-02.md
formal/convergence-safety/test/: dune  test_convergence_conformance.ml  test_convergence_extraction.ml  test_convergence_live.ml  test_convergence_semantics.ml
formal/type-safety/extraction/: .ControlFlowExtraction.aux  .FunExtraction.aux  .OperatorExtraction.aux  .RegistryExtraction.aux  .TypeSafetyExtraction.aux  .UnifyExtraction.aux  .VecExtraction.aux  ConstrExtraction.v  ConstrModel.ml  ConstrModel.mli  ControlFlowExtraction.glob  ControlFlowExtraction.v  ControlFlowExtraction.vo  ControlFlowModel.ml  ControlFlowModel.mli  FunExtraction.glob  FunExtraction.v  FunExtraction.vo  FunModel.ml  FunModel.mli  GPUExtraction.glob  GPUExtraction.v  GPUExtraction.vo  GPUModel.ml  GPUModel.mli  MutExtraction.glob  MutExtraction.v  MutExtraction.vo  MutModel.ml  MutModel.mli  OperatorExtraction.glob  OperatorExtraction.v  OperatorExtraction.vo  OperatorModel.ml  OperatorModel.mli  PatExtraction.glob  PatExtraction.v  PatExtraction.vo  PatternModel.ml  PatternModel.mli  (+26 more)
gh-pages/: index.md  playground.html
kb/: README.md
sarek-cuda/: Cuda_api.ml  Cuda_error.ml  Cuda_plugin.ml  Cuda_plugin_base.ml  Sarek_ir_cuda.ml  dune  (+1 more)
sarek-cuda/test/: dune  test_ptx_external.ml
sarek/Sarek_stdlib_meta/: Float32.ml  Gpu.ml  Int32.ml  Int64.ml  Math.ml  Sarek_stdlib_meta.ml  dune
sarek/codegen/: Sarek_ir_cuda.ml  Sarek_ir_glsl.ml  Sarek_ir_metal.ml  Sarek_ir_opencl.ml  Sarek_ir_ptx.ml  Sarek_ir_wgsl.ml  Sarek_wgsl_abi.ml  Sarek_wgsl_abi.mli  dune
sarek/core/: Ctypes_ops.ml  Kernel.ml  Kernel_arg.ml  Memory.ml  Profiling.ml  README.md  Transfer.ml  Vector.ml  Vector_types.ml  dune
sarek/core/ffi_free_gate/: Stub_ops.ml  dune  gate_numeric.ml
sarek/core/test/: dune  test_nativeint_round_trip.ml  test_vector_transfer.ml
sarek/core_base/: Spoc_core_base.ml  Spoc_core_base.mli  Spoc_core_base_scalar.ml  Spoc_core_base_scalar.mli  dune
sarek/core_js/: Js_ops.ml  Spoc_core_js.ml  Spoc_core_js.mli  dune
sarek/core_js/test/: dune  smoke.ml
sarek/core_js/webgpu/: Webgpu_js.ml  Webgpu_runtime.ml  Webgpu_runtime.mli  dune
sarek/core_js/webgpu/lessons/: compose_driver.ml  dune
sarek/core_js/webgpu/spike-worker/: dune  ma_test.mjs  ma_worker.js  mb_test.mjs  step1_isolation_test.mjs  worker_spike.ml
sarek/core_js/webgpu/test/: dune  runtime_driver.ml  webgpu_runtime_test.mjs
sarek/core_js_exec/: Device_jsx.ml  Jsoo_exec_ops.ml  Kernel_arg_jsx.ml  Log_jsx.ml  Memory_jsx.ml  Spoc_core.ml  Transfer_jsx.ml  Vector_jsx.ml  dune
sarek/execute/: Execute.ml  dune
sarek/execute/jsoo/: dune  smoke.ml
sarek/interp/: Sarek_ir_interp.ml  Sarek_ir_interp_eval.ml  Sarek_ir_interp_intrinsics.ml  Sarek_type_helpers.ml  dune
sarek/plugins/webgpu/: Webgpu_plugin.ml  dune
sarek/plugins/webgpu/spike/numeric_core/: dune  numeric_vector_spike.ml  test_numeric_spike.ml
sarek/plugins/webgpu/spike/webgpu_binding/: dune  webgpu_jsoo_spike.ml  webgpu_jsoo_spike_test.mjs
sarek/ppx/: Kirc_Ast.ml  Sarek_convergence.ml  Sarek_lower_ir.ml  Sarek_native_gen.ml  Sarek_native_gen_base.ml  Sarek_native_gen_expr.ml  Sarek_native_gen_kernel.ml  Sarek_native_helpers.ml  Sarek_parse.ml  Sarek_parse_helpers.ml  Sarek_ppx.ml  Sarek_ppx_registry.ml  Sarek_quote.ml  Sarek_typer.ml  dune
sarek/ppx/test/: test_sarek_debug.ml  test_sarek_error.ml  test_sarek_reserved.ml
sarek/sarek/: Execute.ml  Execute_error.ml  FUSION.md  Interp_error.ml  Kirc_kernel.ml  Sarek_cpu_runtime.ml  Sarek_cpu_runtime.mli  Sarek_cpu_runtime_exec.ml  Sarek_cpu_runtime_pools.ml  Sarek_cpu_runtime_types.ml  Sarek_float32.ml  Sarek_fusion.ml  Sarek_ir_interp.ml  Sarek_ir_interp_eval.ml  Sarek_ir_interp_value.ml  Sarek_type_helpers.ml  Sarek_value.ml  dune
sarek/sarek/test/: test_sarek_type_helpers.ml
sarek/tests/codegen_golden/: dune  gen_cuda.real.ml  gen_cuda.stub.ml  gen_glsl.real.ml  gen_glsl.stub.ml  gen_metal.real.ml  gen_metal.stub.ml  gen_opencl.real.ml  gen_opencl.stub.ml  gen_wgsl.real.ml  test_codegen_golden.ml
sarek/tests/new_runtime/: dune  test_native_runtime.ml
sarek/transpile/: Sarek_ir_conv.ml  Sarek_transpile.ml  Sarek_transpile.mli  dune
sarek/transpile/test/: dune  test_transpile_proof.ml
sarek/transpile/web/: dune  transpile_js.ml
sarek/transpile/web/test/: webgpu_wgsl_test.mjs
spoc/framework/ffi_free_gate/: dune  gate_framework.ml
spoc/framework_error/: dune
(+331 files in other folders)
