; CUDA backend unit tests

(test
 (name test_cuda_error)
 (modules test_cuda_error)
 (libraries sarek_cuda alcotest str)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_sarek_ir_cuda)
 (modules test_sarek_ir_cuda)
 (libraries sarek_cuda spoc.ir alcotest str)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_ptx_external)
 (modules test_ptx_external)
 (libraries sarek_cuda sarek.codegen alcotest)
 (instrumentation
  (backend bisect_ppx)))
